--- a/css/general.css
+++ b/css/general.css
@@ -25,3 +25,154 @@ img {
 	width: 100%;
     display: block;
 }
+
+header {
+    background-color: #73d6ed;
+    overflow: hidden;
+}
+
+.nav {
+  padding: 0;
+}
+
+.nav li {
+  display: block;
+}
+
+.nav a,
+.nav a:link,
+.nav a:visited {
+  display: block;
+
+  color: #fff;
+  text-decoration: none;
+}
+
+.nav a:hover,
+.nav a:focus,
+.nav a:active, 
+.nav .nav-current, 
+.nav .nav-current:link,
+.nav .nav-current:visited {
+  background-color: #c5e1e7;
+
+  color: #fff;
+}
+
+.billboard {
+    overflow: hidden;
+    background-image: url(../images/3.jpg");
+    background-color: #d9e2ea;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 20em;
+}
+
+h1 { 
+    margin: 5rem 0;
+    background-color: rgba(50, 50, 50, .4);
+    font-weight: normal;
+    font-size: .25rem;
+    text-transform: uppercase;
+    padding: .25rem 5%;
+}
+
+.popular {
+    display: inline-block;
+    float: left;
+}
+
+@media only screen and (min-width: 25em) {
+
+  .nav {
+    text-align: center;
+  }
+
+  .nav li {
+    display: inline-block;
+  }
+
+  .nav-footer a,
+  .nav-footer a:link,
+  .nav-footer a:visited {
+    display: inline-block;
+  }
+
+  .nav-footer li::after {
+    content: "·";
+    display: inline-block;
+    width: 0.5em;
+
+    color: #666;
+    text-align: right;
+  }
+
+  .nav-footer li:last-child::after {
+    content: none;
+  }
+
+  .discovery-title-extra {
+    display: inline;
+  }
+
+}
+
+@media only screen and (min-width: 38em) {
+
+  .title,
+  .nav {
+    text-align: left;
+  }
+
+  .discovery-text {
+    padding-right: 1.5rem;
+  }
+
+  .copyright {
+    text-align: left;
+  }
+
+  .nav-footer {
+    text-align: right;
+  }
+
+  th,
+  td {
+    padding: 0.5rem;
+    text-align: left;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  .moon-text {
+    padding-left: 1.5rem;
+  }
+
+  .stats {
+    overflow: hidden;
+  }
+
+  .stats > dt {
+    clear: left;
+    float: left;
+    margin-right: 0.75rem;
+    width: 11em;
+  }
+
+  .stats > dd {
+    float: left;
+  }
+
+  .discovery-text {
+    padding-left: 1.5rem;
+  }
+
+  th,
+  td {
+    padding: 0.75rem;
+    text-align: left;
+  }
+
+}
