--- a/css/typography.css
+++ b/css/typography.css
@@ -149,3 +149,7 @@ h1, h2, h3, h4, h5, h6,
 .brand-family {
     font-family: "Quicksand", serif;
 }
+
+p, figcaption {
+    line-height: 1.3rem;
+}
