--- a/css/general.css
+++ b/css/general.css
@@ -31,6 +31,11 @@ header {
     overflow: hidden;
 }
 
+.title {
+    text-align: center;
+}
+
+
 .nav {
   padding: 0;
 }
@@ -43,7 +48,6 @@ header {
 .nav a:link,
 .nav a:visited {
   display: block;
-
   color: #fff;
   text-decoration: none;
 }
@@ -55,32 +59,50 @@ header {
 .nav .nav-current:link,
 .nav .nav-current:visited {
   background-color: #c5e1e7;
-
   color: #fff;
 }
 
-.billboard {
-    overflow: hidden;
-    background-image: url(../images/3.jpg");
-    background-color: #d9e2ea;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 20em;
+.align-center {
+  text-align: center;
 }
 
-h1 { 
-    margin: 5rem 0;
-    background-color: rgba(50, 50, 50, .4);
-    font-weight: normal;
-    font-size: .25rem;
-    text-transform: uppercase;
-    padding: .25rem 5%;
+.align-right {
+  text-align: right;
 }
 
 .popular {
     display: inline-block;
     float: left;
 }
+
+footer {
+     background-color: #73d6ed;
+     overflow:hidden;
+}
+
+.nav-footer {
+     list-style-type: none;
+}
+
+  .nav-footer a,
+  .nav-footer a:link,
+  .nav-footer a:visited {
+    display: inline-block;
+  }
+
+  .nav-footer li::after {
+    content: "·";
+    display: inline-block;
+    display: none;
+    width: 0.5em;
+    color: #666;
+    float: left;
+  }
+
+  .nav-footer li:last-child::after {
+    content: none;
+  }
+
 
 @media only screen and (min-width: 25em) {
 
@@ -92,28 +114,25 @@ h1 {
     display: inline-block;
   }
 
-  .nav-footer a,
-  .nav-footer a:link,
-  .nav-footer a:visited {
-    display: inline-block;
+  .billboard {
+    overflow: hidden;
+    background-image: url(../images/3.jpg);
+    background-color: #d9e2ea;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 25em;
   }
 
-  .nav-footer li::after {
-    content: "·";
-    display: inline-block;
-    width: 0.5em;
+   h1 { 
+    margin: 5rem 0;
+    background-color: rgba(255, 255, 255, .8);
+    font-weight: normal;
+    text-transform: uppercase;
+    bottom: 1;
+    padding: 0.843rem 0.8rem;
+    position: absolute;
 
-    color: #666;
-    text-align: right;
-  }
-
-  .nav-footer li:last-child::after {
-    content: none;
-  }
-
-  .discovery-title-extra {
-    display: inline;
-  }
+   }
 
 }
 
