--- a/css/general.css
+++ b/css/general.css
@@ -17,7 +17,6 @@ html {
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 	text-size-adjust: 100%;
-    
     font-size: 100%;
 }
 
@@ -57,7 +56,8 @@ header {
     color: #fff;
 }
 
-.signin {
+.signin,
+.j-button {
     letter-spacing: .05em;
     position: relative;
     display: inline-block;
@@ -72,6 +72,8 @@ header {
     background-repeat: repeat-x;
     border-radius: 2px;
     margin-left: 5px;
+    width: 5em;
+    padding: .25em;
 }
 
 .billboard {
@@ -132,7 +134,23 @@ footer {
  .nav li {
    list-style-type: none;
   } 
+    
+ .hidden1 {
+     padding-left: 10em;    
+ }
+    
+ .hidden2 {
+     display: none;
+ }
 
+ .hidden3 {
+     display: none;
+ }
+
+ .copyright {
+    text-align: left;
+  }
+    
   .nav-footer a,
   .nav-footer a:link,
   .nav-footer a:visited {
@@ -157,17 +175,22 @@ footer {
 
 @media only screen and (min-width: 38em) {
 
-  .discovery-text {
-    padding-right: 1.5rem;
-  }
     
 .nav li {
     display: inline-block;
   } 
-
-  .copyright {
-    text-align: left;
+    
+ .hidden1 {
+    display: none;
   }
+
+ .hidden2 {
+    display: inline-block;
+  }
+    
+ .hidden3 {
+     display: none;
+ }
     
   .nav-footer {
     text-align: right;
@@ -181,8 +204,18 @@ footer {
    padding: 0;
    text-align: right;
    clear: left;
-   float: left;
-        
+   float: left;        
+  }
+    
+.hidden3 {
+     display: none;
+ }
+    
+
 }
 
+@media only screen and (min-width: 60em) {
+  .hidden3 {
+     display: inline-block;
+ }
 }
