--- a/css/general.css
+++ b/css/general.css
@@ -20,6 +20,11 @@ html {
     font-size: 100%;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
 img {
 	width: 100%;
     display: block;
@@ -59,6 +64,9 @@ header {
     color: #fff;
 }
 
+.nav li {
+    list-style-type:none;
+}
 .signin,
 .j-button {
     letter-spacing: .05em;
@@ -136,6 +144,15 @@ footer {
      padding: 0.8em 0 0 0.8em;
 }
 
+.social {
+    size: 20px;
+}
+
+.nav-footer li {
+    text-align: left;
+    display:inline-block
+}
+
 @media only screen and (min-width: 25em) {
     
  .nav li {
@@ -158,7 +175,6 @@ footer {
   .nav-footer a:link,
   .nav-footer a:visited {
     display: inline-block;
-    list-style-type:none;
   }
 
   .nav-footer li::after {
@@ -166,8 +182,6 @@ footer {
     display: inline-block;
     width: 0.5em;
     color: #666;
-    text-align: right;
-   
   }
 
   .nav-footer li:last-child::after {
@@ -181,7 +195,6 @@ footer {
 .nav {
     text-align: center;
     letter-spacing: .01em;
-    padding-left: 0.8rem;
 }
     
 .nav li {
