--- a/css/general.css
+++ b/css/general.css
@@ -31,7 +31,6 @@ img {
 }
 
 header {
-    background-color: #73d6ed;
     overflow: hidden;
 }
 
@@ -41,6 +40,15 @@ header {
     letter-spacing: .01em;
     padding-left: 0.8rem;
 }
+
+.nav {
+    text-align: center;
+    letter-spacing: .01em;
+}
+    
+.nav li {
+    display: inline-block;
+  } 
 
 .nav a {
     list-style-type:none;
@@ -60,13 +68,14 @@ header {
 .nav .nav-current, 
 .nav .nav-current:link,
 .nav .nav-current:visited {
-    background-color: #c5e1e7;
+    background-color: #3aacb8;
     color: #fff;
 }
 
 .nav li {
     list-style-type:none;
 }
+
 .signin,
 .j-button {
     letter-spacing: .05em;
@@ -76,36 +85,14 @@ header {
     white-space: nowrap;
     vertical-align: middle;
     text-decoration: none;
-    background-color: #eee;
-    background-image: -webkit-linear-gradient(#d4f6fe, #9ee5f6);
-    background-image: linear-gradient(#d4f6fe,#9ee5f6);
+    border: 3px solid white;
+    border-radius: .3em;
     background-repeat: repeat-x;
-    border-radius: 2px;
     width: 5em;
 }
 
-.hidden2 {
-     display: none;
- }
-
-.billboard {
-    overflow: hidden;
-    size: 100;
-    background-image: url(../images/3.jpg);
-    background-color: white;
-    background-repeat: no-repeat;
-    background-position: right;
-    background-size: 50em;
-  }
-
-h1 > p { 
-    font-weight: normal;
-    text-transform: uppercase;
-    position: absolute;
- }
-
  .white {
-     background-color: rgba(255, 255, 255, .9);
+     background-color: rgba(0, 0, 0, .4);
  }
 
 h3 {
@@ -121,9 +108,23 @@ h3 {
   text-align: right;
 }
 
+.section-blue {
+  background-color: #51c6d8;
+}
+
+.section-lightblue {
+  background-color: #dff0f2;
+ border: 5px solid white;
+ border-radius: .36em;
+  
+}
+
+.section {
+  background-color: #ffe9cd;
+}
+
 .j-button {
     display: inline-block;
-    color: #fff;
     text-align: center;
     text-decoration: none;
     background-color: #73d6ed;
@@ -139,97 +140,87 @@ h3 {
 }
 
 footer {
-     background-color: #73d6ed;
+
      overflow:hidden;
      padding: 0.8em 0 0 0.8em;
 }
 
 .social {
     size: 20px;
+    padding: 0;
+    height:auto
 }
 
+.icon {
+    width: 30%;
+    padding: 0;
+    height:auto
+}
+    
 .nav-footer li {
-    text-align: left;
-    display:inline-block
+    display:inline-block;
+    float: left;
+    text-align: right;
 }
-
-@media only screen and (min-width: 25em) {
-    
- .nav li {
-   list-style-type: none;
-  } 
-    
- .hidden1 {
-     margin: 0 0 0 12em;  
- }
-    
- .hidden3 {
-     visibility: hidden;
- }
-
- .copyright {
-    text-align: left;
-  }
-    
+ 
   .nav-footer a,
   .nav-footer a:link,
   .nav-footer a:visited {
-    display: inline-block;
+      display: inline-block;
+    
   }
 
   .nav-footer li::after {
     content: "·";
-    display: inline-block;
     width: 0.5em;
-    color: #666;
+    text-align: right;
   }
 
-  .nav-footer li:last-child::after {
+.nav-footer li:last-child::after {
     content: none;
   }
+
+@media only screen and (min-width: 25em) {
+    
+ .billboard {
+    overflow: hidden;
+     size: 100;
+    background-image: url(../images/giftCenterPresentBow.jpg);
+    background-repeat: no-repeat;
+    background-color: gray;
+    background-position: center;
+    background-size: 50em;
+    color: white;
+  } 
+ 
+ .copyright {
+    text-align: left;
+  }
+    
+ .social {
+    width: 50%;
+    height: auto;
+ }
+    
 
 }
 
 @media only screen and (min-width: 38em) {
-
-.nav {
-    text-align: center;
-    letter-spacing: .01em;
-}
-    
-.nav li {
-    display: inline-block;
-  } 
-    
- .hidden1 {
-    display: none;
-  }
-
- .hidden2 {
-    display: inline-block;
-  }
-    
- .hidden3 {
-     visibility: hidden;
- }
-    
-  .nav-footer {
-    text-align: right;
+ .billboard {
+    overflow: hidden;
+    size: 100;
+    background-image: url(../images/gift-blue.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50em;
+    background-color: white;
   }
 
 }
 
 @media only screen and (min-width: 60em) {
-    
-.hidden3 {
-     visibility: hidden;
- }
-
+   
 }
 
 @media only screen and (min-width: 143em) {
-  .hidden3 {
-     display: inline-block;
-     float: left
- }
 }
