--- a/css/general.css
+++ b/css/general.css
@@ -131,6 +131,10 @@ h3 {
 
 .align-center {
   text-align: center;
+  vertical-align: middle;
+  display: block;
+  margin-left: auto;
+  margin-right: auto 
 }
 
 .align-right {
