--- a/css/general.css
+++ b/css/general.css
@@ -77,6 +77,24 @@ header {
     list-style-type:none;
 }
 
+.skip-links {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.skip-links a {
+  padding: 0.5em 0.75em;
+  position: absolute;
+  top: -3em; 
+  background-color: #dff0f2;
+  color: #000;
+  font-size: 1.125em;
+  font-weight: bold;
+  text-decoration: none;
+
+}
+
 .signin,
 .j-button {
     letter-spacing: .05em;
